# MarkdownForge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  tauri.conf.json
capabilities/: default.json
dmg-assets/: 使用说明.md
icons/: icon.icns
scripts/: build-manual-pdf.sh  build-release.sh  dmgbuild-settings.py  gen-dmg-bg.py  make-dmg.sh  release-push.sh  rollback.sh
src/: lib.rs  main.rs
src-frontend/: body.html  core.js  index.html  main.css
src-frontend/libs/: turndown.js
